<resources>
    <string name="app_name">手机品牌信息管理系统</string>
    <string name="login_title">用户登录</string>
    <string name="login_account">手机号码/用户名/邮箱</string>
    <string name="login_password">密码</string>
    <string name="login_remember">记住密码</string>
    <string name="login_register">立刻注册>></string>
    <string name="btn_login">登录</string>
    <string name="register_title">用户注册</string>
    <string name="register_phoneNum">手机号码</string>
    <string name="register_user">用户名</string>
    <string name="register_mail">邮箱</string>
    <string name="register_password">密码</string>
    <string name="register_rePassword">再次确认密码</string>
    <string name="btn_register">注册</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_brand_plus">添加品牌</string>
    <string name="nav_brand_query">查询品牌</string>
    <string name="nav_brand_alter">修改品牌</string>
    <string name="nav_brand_delete">删除品牌</string>
    <string name="nav_change_head">更换头像</string>
    <string name="nav_change_user">切换用户</string>
    <string name="delete_hint">输入你需要删除的品牌信息</string>
    <string name="update_name_hint">输入你要修改的品牌</string>
    <string name="update_time_hint">输入你重新修改的品牌建立时间</string>
    <string name="update_country_hint">输入你重新修改的品牌所属国家</string>
    <string name="update_ceo_hint">输入你重新修改的品牌总裁</string>
    <string name="update_introduce_hint">输入你重新修改的品牌简介</string>
    <string name="btn_update_update">修改</string>
    <string name="plus_name_hint">输入名称</string>
    <string name="plus_time_hint">输入建立时间</string>
    <string name="plus_country_hint">输入所属国家</string>
    <string name="plus_ceo_hint">输入总裁</string>
    <string name="plus_introduce_hint">输入品牌简介</string>
    <string name="btn_plus_photo">选取图片</string>
    <string name="btn_plus_plus">添加</string>
    <string name="et_query_hint">输入你要查询的信息</string>
    <string name="btn_query_query">查询</string>
</resources>
