<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_brand_plus"
            android:icon="@drawable/nav_head"
            android:title="@string/nav_brand_plus"/>

        <item
            android:id="@+id/nav_brand_query"
            android:icon="@drawable/nav_head"
            android:title="@string/nav_brand_query"/>

        <item
            android:id="@+id/nav_brand_update"
            android:icon="@drawable/nav_head"
            android:title="@string/nav_brand_alter" />

        <item
            android:id="@+id/nav_brand_delete"
            android:icon="@drawable/nav_head"
            android:title="@string/nav_brand_delete"/>

        <item
            android:id="@+id/nav_change_user"
            android:icon="@drawable/nav_head"
            android:title="@string/nav_change_user" />

        <item
            android:id="@+id/nav_change_header"
            android:icon="@drawable/nav_head"
            android:title="@string/nav_change_head" />
    </group>
</menu>